--- a/css/admin.css
+++ b/css/admin.css
@@ -3,7 +3,7 @@ body {
 }
 
 #admin-banner {
-    background-image: url("../img/chess.jpg");
+    background-image: url("../img/banner/chess.jpg");
     background-size: cover;
     background-position: top center;
 }
