--- a/css/header.css
+++ b/css/header.css
@@ -6,6 +6,7 @@ header {
     height: 4rem;
     background-color: #FFFFFF;
     box-shadow: 3px 0 10px rgba(0, 0, 0, 0.35);
+    z-index: 40;
 }
 
 header [class*="header-"], .topnav {
