--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,37 @@
 #main-banner {
-    background-image: url("../img/chess.jpg");
-    background-size: cover;
-    background-position: top center;
+    position: relative;
+    background-color: #000000;
 }
 
-#main-banner * {
+#main-banner h1, #main-banner h2 {
     color: #FFFFFF;
+    z-index: 30;
 }
+
+#main-banner .banner-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 20;
+}
+
+#main-banner .banner-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: top center;
+    z-index: 10;
+}
+
+.fade{
+    animation: fade 1s;
+}
+
+@keyframes fade {
+    from {opacity: .1}
+    to {opacity: 1}
+}
+
+
