--- a/css/admin.css
+++ b/css/admin.css
@@ -1,6 +1,10 @@
+/* Common */
+
 body {
     position: relative;
 }
+
+/* Banner */
 
 #admin-banner {
     background-image: url("../img/banner/chess.jpg");
@@ -19,6 +23,8 @@ body {
     font-size: 1.5rem;
     color: #FFFFFF;
 }
+
+/* Popup */
 
 .overlay-container {
     display: none;
@@ -130,6 +136,8 @@ body {
 #confirmation-overlay h3 {
     margin-bottom: 0;
 }
+
+/* Media-Query */
 
 @media only screen and (max-width: 650px) {
     .overlay {
