--- a/css/case.css
+++ b/css/case.css
@@ -1,6 +1,10 @@
+/* Common */
+
 main {
     min-height: unset;
 }
+
+/* Banner */
 
 #case-banner {
     display: grid;
@@ -16,12 +20,12 @@ main {
     height: 4rem;
 }
 
-#case-banner-left{
+#case-banner-left {
     justify-content: flex-start;
     margin-left: 2rem;
 }
 
-#case-banner-right{
+#case-banner-right {
     justify-content: flex-end;
     margin-right: 2rem;
 }
@@ -31,6 +35,8 @@ main {
     font-size: 2rem;
 }
 
+/* Main content */
+
 .case-wrapper-case-site {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -39,10 +45,7 @@ main {
     background-color: #FFFFFF;
     border-radius: 0.2rem;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.35);
-
 }
-
-#case-content-left {}
 
 #case-content-left section {
     border-bottom: 1px solid lightgrey;
@@ -52,12 +55,11 @@ main {
     font-size: 1.5rem;
     font-weight: 400;
 }
-#case-content-left section h2 {}
+
 #case-content-left section h3 {
     font-size: 1.2rem;
     font-weight: 300;
 }
-#case-content-left section h4 {}
 
 #case-content-left section h5 {
     color: #77828f;
@@ -70,15 +72,12 @@ main {
 #case-content-left .header-section {
     display: flex;
     flex-direction: row;
-    align-items: center;   
+    align-items: center;
 }
 
 #case-content-left .header-section h5:last-of-type {
     margin-left: auto;
 }
-
-#case-content-left .title-section {}
-#case-content-left .type-section {}
 
 #case-content-left .desc-section {
     border-bottom: none;
@@ -92,15 +91,19 @@ main {
     text-align: center;
 }
 
-#case-content-right .case-img{
+#case-content-right .case-img {
     max-width: 100%;
     max-height: 500px;
     margin: 0 auto;
 }
 
+/* Footer-style only for this site */
+
 footer {
     margin-top: 0 !important;
 }
+
+/* Media-Query's */
 
 @media only screen and (max-width: 1200px) {
     #case-content-left {
