--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+/* Banner */
+
 #main-banner {
     position: relative;
     background-color: #000000;
@@ -25,13 +27,17 @@
     z-index: 10;
 }
 
-.fade{
+/* Animation for fading in images is banner */
+
+.fade {
     animation: fade 1s;
 }
 
 @keyframes fade {
-    from {opacity: .1}
-    to {opacity: 1}
+    from {
+        opacity: .1
+    }
+    to {
+        opacity: 1
+    }
 }
-
-
